--- a/Oripresso/OrderList.storyboard
+++ b/Oripresso/OrderList.storyboard
@@ -12,7 +12,7 @@
         <!--Title-->
         <scene sceneID="9Nu-E5-b0m">
             <objects>
-                <viewController id="PBo-eF-dzn" customClass="ViewController" customModule="Oripresso" customModuleProvider="target" sceneMemberID="viewController">
+                <viewController id="PBo-eF-dzn" customClass="orderButtonViewController" customModule="Oripresso" customModuleProvider="target" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="s57-it-T5B">
                         <rect key="frame" x="0.0" y="0.0" width="393" height="852"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
@@ -82,12 +82,20 @@
                                                 <color key="tintColor" systemColor="systemGray2Color"/>
                                                 <state key="normal" title="Button"/>
                                                 <buttonConfiguration key="configuration" style="filled" title="주문취소"/>
+                                                <connections>
+                                                    <action selector="orderCancelButton:" destination="PBo-eF-dzn" eventType="touchUpInside" id="5kb-ov-APN"/>
+                                                    <action selector="orderCancelButton:" destination="ax0-dY-1i4" eventType="touchUpInside" id="qGB-QQ-ivv"/>
+                                                </connections>
                                             </button>
                                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="9rk-gD-0DJ">
                                                 <rect key="frame" x="255.33333333333329" y="0.0" width="117.66666666666666" height="72"/>
                                                 <color key="tintColor" systemColor="systemGreenColor"/>
                                                 <state key="normal" title="Button"/>
                                                 <buttonConfiguration key="configuration" style="filled" title="주문하기"/>
+                                                <connections>
+                                                    <action selector="didTapButton:" destination="PBo-eF-dzn" eventType="touchUpInside" id="x6p-RP-oPt"/>
+                                                    <action selector="orderCancelButton:" destination="PBo-eF-dzn" eventType="touchUpInside" id="M9q-DX-U5T"/>
+                                                </connections>
                                             </button>
                                         </subviews>
                                     </stackView>
@@ -129,6 +137,7 @@
                     <navigationItem key="navigationItem" title="Title" id="tzi-nx-qRZ" userLabel="Back"/>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="x40-TG-Bmn" sceneMemberID="firstResponder"/>
+                <exit id="ax0-dY-1i4" userLabel="Exit" sceneMemberID="exit"/>
             </objects>
             <point key="canvasLocation" x="23.664122137404579" y="-34.507042253521128"/>
         </scene>
@@ -142,10 +151,10 @@
             <color white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
         </systemColor>
         <systemColor name="systemGray2Color">
-            <color red="0.68235294120000001" green="0.68235294120000001" blue="0.69803921570000005" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+            <color red="0.68235294117647061" green="0.68235294117647061" blue="0.69803921568627447" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
         </systemColor>
         <systemColor name="systemGreenColor">
-            <color red="0.20392156859999999" green="0.78039215689999997" blue="0.34901960780000002" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+            <color red="0.20392156862745098" green="0.7803921568627451" blue="0.34901960784313724" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
         </systemColor>
     </resources>
 </document>
