--- a/Oripresso/MainView.storyboard
+++ b/Oripresso/MainView.storyboard
@@ -53,15 +53,31 @@
                                     <action selector="segmentedControlSelected:" destination="Y6W-OH-hqX" eventType="valueChanged" id="Yca-1E-L76"/>
                                 </connections>
                             </segmentedControl>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="kkJ-js-xBF">
+                                <rect key="frame" x="299" y="671" width="66" height="66"/>
+                                <constraints>
+                                    <constraint firstAttribute="width" constant="66" id="Yob-yX-CWf"/>
+                                    <constraint firstAttribute="height" constant="66" id="qYo-fc-Iyz"/>
+                                </constraints>
+                                <state key="normal" title="Button"/>
+                                <buttonConfiguration key="configuration" style="plain" image="cart">
+                                    <backgroundConfiguration key="background" image="orangeCircle" imageContentMode="scaleAspectFit"/>
+                                </buttonConfiguration>
+                                <connections>
+                                    <action selector="floatingButtonTapped:" destination="Y6W-OH-hqX" eventType="touchUpInside" id="ebD-0N-Rkq"/>
+                                </connections>
+                            </button>
                         </subviews>
                         <viewLayoutGuide key="safeArea" id="vDu-zF-Fre"/>
                         <color key="backgroundColor" systemColor="systemBackgroundColor"/>
                         <constraints>
                             <constraint firstItem="GGp-Tw-JVC" firstAttribute="top" secondItem="wXf-X8-6Vz" secondAttribute="bottom" id="2Ke-nv-R1j"/>
                             <constraint firstItem="GGp-Tw-JVC" firstAttribute="bottom" secondItem="vDu-zF-Fre" secondAttribute="bottom" id="314-SG-7T5"/>
+                            <constraint firstItem="kkJ-js-xBF" firstAttribute="leading" secondItem="vDu-zF-Fre" secondAttribute="leading" constant="299" id="9fr-Ya-QiX"/>
                             <constraint firstItem="wXf-X8-6Vz" firstAttribute="trailing" secondItem="vDu-zF-Fre" secondAttribute="trailing" id="CYG-aI-XJ1"/>
                             <constraint firstItem="FHl-j1-v88" firstAttribute="centerX" secondItem="vDu-zF-Fre" secondAttribute="centerX" id="H2W-3B-yd6"/>
                             <constraint firstItem="l5C-rK-YZj" firstAttribute="top" secondItem="FHl-j1-v88" secondAttribute="bottom" constant="29" id="Jbe-4g-ZjZ"/>
+                            <constraint firstItem="kkJ-js-xBF" firstAttribute="top" secondItem="vDu-zF-Fre" secondAttribute="top" constant="612" id="M0o-IX-W8v"/>
                             <constraint firstItem="wXf-X8-6Vz" firstAttribute="centerX" secondItem="vDu-zF-Fre" secondAttribute="centerX" id="UEX-zF-bSa"/>
                             <constraint firstItem="l5C-rK-YZj" firstAttribute="leading" secondItem="vDu-zF-Fre" secondAttribute="leading" id="YMb-Eb-260"/>
                             <constraint firstItem="vDu-zF-Fre" firstAttribute="trailing" secondItem="l5C-rK-YZj" secondAttribute="trailing" id="cg8-vh-BsW"/>
@@ -73,6 +89,7 @@
                         </constraints>
                     </view>
                     <connections>
+                        <outlet property="floatingButton" destination="kkJ-js-xBF" id="oT2-om-Fdb"/>
                         <outlet property="menuBottom" destination="GGp-Tw-JVC" id="Vqt-z7-jWR"/>
                         <outlet property="segment" destination="l5C-rK-YZj" id="cyC-CH-D1G"/>
                         <outlet property="uiTableView" destination="wXf-X8-6Vz" id="Nxd-vh-kYJ"/>
@@ -85,7 +102,9 @@
         </scene>
     </scenes>
     <resources>
+        <image name="cart" width="47" height="47"/>
         <image name="menuSelectBottom" width="288" height="50"/>
+        <image name="orangeCircle" width="66" height="66"/>
         <image name="title" width="182" height="50"/>
         <systemColor name="systemBackgroundColor">
             <color white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
