--- a/Oripresso/MainView.storyboard
+++ b/Oripresso/MainView.storyboard
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="32700.99.1234" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="Y6W-OH-hqX">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="32700.99.1234" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES">
     <device id="retina6_12" orientation="portrait" appearance="light"/>
     <dependencies>
         <deployment identifier="iOS"/>
@@ -21,7 +21,7 @@
                                 <rect key="frame" x="52.666666666666657" y="768" width="288" height="50"/>
                             </imageView>
                             <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="-1" estimatedSectionHeaderHeight="-1" sectionFooterHeight="-1" estimatedSectionFooterHeight="-1" translatesAutoresizingMaskIntoConstraints="NO" id="wXf-X8-6Vz">
-                                <rect key="frame" x="0.0" y="198" width="393" height="570"/>
+                                <rect key="frame" x="0.0" y="242" width="393" height="526"/>
                                 <color key="backgroundColor" systemColor="systemBackgroundColor"/>
                                 <prototypes>
                                     <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" preservesSuperviewLayoutMargins="YES" selectionStyle="default" indentationWidth="10" reuseIdentifier="MainViewTableCell" id="PKo-eg-hmD" customClass="MainViewTableCell" customModule="Oripresso" customModuleProvider="target">
@@ -35,14 +35,14 @@
                                 </prototypes>
                             </tableView>
                             <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="title" translatesAutoresizingMaskIntoConstraints="NO" id="FHl-j1-v88">
-                                <rect key="frame" x="105.66666666666669" y="59" width="182" height="50"/>
+                                <rect key="frame" x="105.66666666666669" y="103" width="182" height="50"/>
                                 <constraints>
                                     <constraint firstAttribute="height" constant="50" id="Jc4-Dn-8x2"/>
                                     <constraint firstAttribute="width" constant="182" id="W6x-pU-vZ9"/>
                                 </constraints>
                             </imageView>
                             <segmentedControl opaque="NO" contentMode="scaleAspectFit" contentHorizontalAlignment="center" contentVerticalAlignment="center" segmentControlStyle="plain" selectedSegmentIndex="0" translatesAutoresizingMaskIntoConstraints="NO" id="l5C-rK-YZj">
-                                <rect key="frame" x="0.0" y="138" width="393" height="32"/>
+                                <rect key="frame" x="0.0" y="182" width="393" height="32"/>
                                 <segments>
                                     <segment title="Coffee"/>
                                     <segment title="Non-Coffee"/>
@@ -88,6 +88,7 @@
                             <constraint firstItem="wXf-X8-6Vz" firstAttribute="top" secondItem="l5C-rK-YZj" secondAttribute="bottom" constant="29" id="xZW-B8-lb2"/>
                         </constraints>
                     </view>
+                    <navigationItem key="navigationItem" id="jhv-Xf-fzO"/>
                     <connections>
                         <outlet property="floatingButton" destination="kkJ-js-xBF" id="oT2-om-Fdb"/>
                         <outlet property="menuBottom" destination="GGp-Tw-JVC" id="Vqt-z7-jWR"/>
@@ -98,7 +99,25 @@
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="Ief-a0-LHa" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="57.251908396946561" y="-2.1126760563380285"/>
+            <point key="canvasLocation" x="1910.6870229007632" y="-2.1126760563380285"/>
+        </scene>
+        <!--Navigation Controller-->
+        <scene sceneID="vfK-iO-ue4">
+            <objects>
+                <navigationController automaticallyAdjustsScrollViewInsets="NO" id="Dyr-oh-zlZ" sceneMemberID="viewController">
+                    <toolbarItems/>
+                    <navigationBar key="navigationBar" contentMode="scaleToFill" id="pNe-FR-vHE">
+                        <rect key="frame" x="0.0" y="59" width="393" height="44"/>
+                        <autoresizingMask key="autoresizingMask"/>
+                    </navigationBar>
+                    <nil name="viewControllers"/>
+                    <connections>
+                        <segue destination="Y6W-OH-hqX" kind="relationship" relationship="rootViewController" id="TkZ-Id-7Xn"/>
+                    </connections>
+                </navigationController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="grv-Lt-9eM" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="983.96946564885491" y="-2.1126760563380285"/>
         </scene>
     </scenes>
     <resources>
